// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package vr180;
option java_package = "com.google.vr180";
option java_outer_classname = "CameraPairingApi";
option objc_class_prefix = "VR180P";

// Contains information about the user's preference settings for the camera.
message CameraPreferences {
  // The name assigned by the user to the camera.
  optional string name = 1;

  reserved 2, 3, 4, 5;
}

// Represents an id for a camera.
message CameraId {
  // The public key of the camera (used to identify it based on its
  // manufacturerSpecificData during BLE scan).
  optional bytes public_key = 1;
}

// Contains the saved data about a camera paired with the app.
message PairedCameraInfo {
  // The public key of the camera (used to identify it based on its
  // manufacturerSpecificData during BLE scan).
  optional bytes camera_public_key = 1;

  // The shared AES key used for encrypting bluetooth traffic with the device.
  optional bytes shared_key = 2;

  // The user's preferences for the camera.
  optional CameraPreferences preferences = 3;
}

message PairingInfo {
  // Information about the cameras paired with the app.
  repeated PairedCameraInfo cameras = 1;
}
